# exp-xml-conduit

./: LICENSE  exp-xml-conduit.cabal  inp.xml  stack.yaml
src/: Generate.hs  Main.hs
