name:                exp-xml-conduit
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/exp-xml-conduit#readme
license:             BSD3
license-file:        LICENSE
author:              Milán Nagy
maintainer:          123.wizek@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable exp-xml-conduit
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:
    QuasiQuotes
  ghc-options:
    -O2
  build-depends:
      base >= 4.7 && < 5
    , xml-conduit
    , xml-types
    , resourcet
    , conduit
    , text
    , mtl
    , exceptions
    , xml-hamlet
    , pretty-show
    , containers

